Added supabase as default DVC remote

--- a/.dvc/config
+++ b/.dvc/config
@@ -1,3 +1,7 @@
+[core]
+    remote = supabase-storage
 ['remote "origin"']
     url = s3://artifacts/
     endpointurl = https://vyuzbnzlahwfaihwsmqi.supabase.co/storage/v1/s3
+['remote "supabase-storage"']
+    url = https://vyuzbnzlahwfaihwsmqi.supabase.co/storage/v1/s3
