--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+aiobotocore==2.20.0
 aiohappyeyeballs==2.4.6
 aiohttp==3.11.12
 aiohttp-retry==2.9.1
+aioitertools==0.12.0
 aiosignal==1.3.2
 altair==5.5.0
 amqp==5.3.1
@@ -21,6 +23,8 @@ beautifulsoup4==4.13.3
 billiard==4.2.1
 bleach==6.2.0
 blinker==1.9.0
+boto3==1.36.23
+botocore==1.36.23
 cachetools==5.5.2
 celery==5.4.0
 certifi==2025.1.31
@@ -34,7 +38,7 @@ colorama==0.4.6
 comm==0.2.2
 configobj==5.0.9
 contourpy==1.3.1
-cryptography==44.0.1
+cryptography==43.0.3
 cycler==0.12.1
 debugpy==1.8.12
 decorator==5.1.1
@@ -47,9 +51,11 @@ dpath==2.2.0
 dulwich==0.22.7
 dvc==3.59.1
 dvc-data==3.16.9
+dvc-gdrive==3.0.1
 dvc-http==2.32.0
 dvc-objects==5.1.0
 dvc-render==1.0.2
+dvc-s3==3.2.0
 dvc-studio-client==0.21.0
 dvc-task==0.40.2
 email_validator==2.2.0
@@ -68,10 +74,16 @@ fsspec==2025.2.0
 funcy==2.0
 gitdb==4.0.12
 GitPython==3.1.44
+google-api-core==2.24.1
+google-api-python-client==2.161.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+googleapis-common-protos==1.68.0
 grandalf==0.8
 gto==1.7.2
 h11==0.14.0
 httpcore==1.0.7
+httplib2==0.22.0
 httptools==0.6.4
 httpx==0.28.1
 hydra-core==1.3.2
@@ -82,6 +94,7 @@ isoduration==20.11.0
 iterative-telemetry==0.0.10
 jedi==0.19.2
 Jinja2==3.1.5
+jmespath==1.0.1
 joblib==1.4.2
 json5==0.10.0
 jsonpointer==3.0.0
@@ -114,6 +127,7 @@ networkx==3.4.2
 notebook==7.3.2
 notebook_shim==0.2.4
 numpy==2.2.2
+oauth2client==4.1.3
 omegaconf==2.3.0
 orjson==3.10.15
 overrides==7.7.0
@@ -128,19 +142,24 @@ platformdirs==4.3.6
 prometheus_client==0.21.1
 prompt_toolkit==3.0.50
 propcache==0.3.0
+proto-plus==1.26.0
 protobuf==5.29.3
 psutil==6.1.1
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pyarrow==19.0.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
 pydeck==0.9.1
 pydot==3.0.4
+PyDrive2==1.21.3
 pygit2==1.17.0
 Pygments==2.19.1
 pygtrie==2.5.0
+pyOpenSSL==24.2.1
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -156,7 +175,10 @@ rfc3986-validator==0.1.1
 rich==13.9.4
 rich-toolkit==0.13.2
 rpds-py==0.22.3
+rsa==4.9
 ruamel.yaml==0.18.10
+s3fs==2025.2.0
+s3transfer==0.11.2
 scikit-learn==1.6.1
 scipy==1.15.1
 scmrepo==3.3.10
@@ -190,6 +212,7 @@ types-python-dateutil==2.9.0.20241206
 typing_extensions==4.12.2
 tzdata==2025.1
 uri-template==1.3.0
+uritemplate==4.1.1
 urllib3==2.3.0
 uvicorn==0.34.0
 uvloop==0.21.0
@@ -202,5 +225,6 @@ webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 websockets==15.0
+wrapt==1.17.2
 yarl==1.18.3
 zc.lockfile==3.0.post1
